fixed horizontal scroll

--- a/css/media.css
+++ b/css/media.css
@@ -6,7 +6,7 @@
   }
 
   .navbar .site-name{
-    width: 100%;
+
     padding-left: 30px;
   }
 
